ARGUS-32471: Configured surefire plugin to be able to build with JDK17.